--- a/office_emp_proj/emp_app/templates/index.html
+++ b/office_emp_proj/emp_app/templates/index.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Office Employee Management System</title>
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Hello Mitro....</h1>
+    <div class="container">
+        <h1>Office Emp mang sys</h1>
+        <hr>
+        <a class="btn btn-primary" href="/view_all_emp" role="button">view all employee</a>
+        <a class="btn btn-primary" href="/add_emp" role="button">Add an employee</a>
+        <a class="btn btn-primary" href="/remove_emp" role="button">Remove an employee</a>
+        <a class="btn btn-primary" href="/filter_emp" role="button">Filter employee details</a>
+    </div>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+ 
+
