--- a/office_emp_proj/emp_app/templates/remove_emp.html
+++ b/office_emp_proj/emp_app/templates/remove_emp.html
@@ -1,6 +1,42 @@
- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Office Employee Management System</title>
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-  <div class="container mt-5">
-    <h1 class="mb-4 text-center">Employee's Details</h1>
-    <hr>
+    <div class="container">
+        <h1>Remove an Employee</h1>
+        <hr>
+        <div class="dropdown">
+  <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+    Choose emp to be removed
+  </button>
+  <ul class="dropdown-menu">
+    {% for emp in emps %}
+    <li><a class="dropdown-item" href="/remove_emp/{{emp.id}}">{{emp.first_name}}  {{emp.last_name}}</a></li>
+    {% endfor %}
+    
+  </ul>
+</div>
+    </div>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+ 
+
