--- a/office_emp_proj/emp_app/templates/filter_emp.html
+++ b/office_emp_proj/emp_app/templates/filter_emp.html
@@ -1,6 +1,45 @@
- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Office Employee Management System</title>
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-  <div class="container mt-5">
-    <h1 class="mb-4 text-center">Employee's Details</h1>
+    <div class="container">
+        <h1>Filter Employee Details!</h1>
+        <hr>
+    <form action="/filter_emp" method="post">
+    {% csrf_token %}
+    <label for="first_name">Employee First/Last Name</label><br>
+    <input type="text" id="first_name" name="first_name" value="{{ first_name}}"><br>
+
+    <label for="dept">Department</label><br>
+    <input type="text" id="dept" name="dept" value="{{ dept}}"><br>
+
+    <label for="role">Role</label><br>
+    <input type="text" id="role" name="role" value="{{ role}}"><br>
+
     <hr>
+    <button type="submit" class="btn btn-primary">Submit</button>
+</form>
+    </div>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+ 
+
